--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section class="main__page">
         <div class="section container">
             <div class="section__profile">
-                <img src="img/profile.jpg" alt="">
+                <img src="img/dhemz.jpg" alt="">
                 <h1 class="section__name">Dhemler Omapas</h1>
                 <hr>
                 <p class="section__job">
