--- a/index.html
+++ b/index.html
@@ -80,8 +80,14 @@
     </section>
     <section class="main__page2">
         <div class="section2 container">
+            <div class="section2__bg__rocket">
+                <img src="icons/rocket-svgrepo-com.svg" alt="">
+            </div>
             <div class="section2__about">
-                <h1>About <span class="section__span">me</span></h1>
+                <div class="section2__img">
+                    <h1>About <span class="section__span">me</span></h1>
+                    <img src="img/dhemz.jpg" alt="">
+                </div>
                 <p>I believe my unique experiences have shaped me into the person I am today and have greatly
                     influenced my ambitions and strengths. One significant experience that stands out is the dedication
                     I put into every task given to me. I have a strong work ethic, and I'm not afraid of putting in
