--- a/index.html
+++ b/index.html
@@ -63,9 +63,9 @@
                     web <span class="section__span">developer</span>
                 </p>
                 <div class="section__contact__links">
-                    <a href="https://github.com/dhemz21"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.facebook.com/dhemz21.omp"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/dhemz21" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="https://www.facebook.com/dhemz21.omp" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="section__introduction">
