--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
                 </p>
                 <div class="section__contact__links">
                     <a href="https://github.com/dhemz21" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.facebook.com/dhemz21.omp" target="_blank"><i class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://www.facebook.com/dhemz21.omp" target="_blank"><i
+                            class="fa-brands fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9" target="_blank"><i
+                            class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="section__introduction">
@@ -92,7 +94,9 @@
             </div>
             <div class="section2__about">
                 <div class="section2__img">
-                    <h1>About <span class="section__span">me</span></h1>
+                    <h1>
+                        About<span class="section__span">me</span>
+                    </h1>
                     <img src="img/dhemz.jpg" alt="">
                 </div>
                 <p>I believe my unique experiences have shaped me into the person I am today and have greatly
@@ -134,10 +138,10 @@
         </div>
     </section>
     <section id="services" class="main__page2">
-        <div class="section2 container">
+        <div class="section3 container">
             <div class="section2__heading">
                 <h1>
-                    My<span class="section__span">Services</span>
+                    My<span class="section__span"> Services</span>
                 </h1>
             </div>
             <div class="section2__main__box">
@@ -197,32 +201,42 @@
                     </a>
                 </div>
             </div>
-            <hr class="section__span">
+            <hr class="section2__hr">
         </div>
     </section>
     <section id="projects" class="main__page2">
-
+        <div class="section4 container">
+            <div class="section2__heading">
+                <h1>
+                    My<span class="section__span"> Projects</span>
+                </h1>
+            </div>
+            <div class="section4__projects">
+                <div class="evsu__system">
+                    <img src="project/Project1.jpg" alt="My project">
+                    <p class="evsu__system__info">
+                       I have been assigned as the programmer to build this project, which is our Thesis System. This system is named
+                       <strong>
+                        'Events and Activities Attendance Management Monitoring and Management System.' 
+                       </strong>
+                        Some of the cool features of this system include the use of <strong>QR codes for attendance</strong>, 
+                       <strong> support for offline scanning</strong>, <strong>temporary storage of users data in a JSON file if there is no internet 
+                        connection,</strong> the ability to <strong>generate attendance sheets into pdf file</strong>, and the use of <strong>One Time Password (OTP)</strong> for user 
+                        registration. It can also post events to specific users and send them to their email if there are posted 
+                        events, It also have a <strong>CRUD functionality</strong> This System uses <b>HTML, CSS, BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, json, phplibraries</b>.
+                    </p>
+                    <img src="project/Project2.jpg" alt="My project">
+                    <p class="evsu__system__info">
+                        I have been assigned as the programmer to build this project, <strong>PhilHealth System</strong>, This system I built when 
+                        I was on OJT on Philhealth. The features of this system can <strong>generate document copy in pdf file</strong>, it uses <strong>One Time Password (OTP)</strong> for employee registration.
+                        Every document has a unique code based on the date that the file was upladed, It also have a CRUD functionality, This system uses
+                        <b>HTML, CSS, BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, phplibraries</b>.
+                     </p>
+                </div>
+            </div>
+        </div>
     </section>
-    <script>
-    document.addEventListener("DOMContentLoaded", function() {
-    const navLinks = document.querySelectorAll(".navbar__menu a");
-
-    navLinks.forEach(link => {
-      link.addEventListener("click", function(event) {
-        event.preventDefault();
-        const targetId = this.getAttribute("href");
-        console.log("Target ID:", targetId); // Add this line
-        const targetElement = document.querySelector(targetId);
-        if (targetElement) {
-          window.scrollTo({
-            top: targetElement.offsetTop - 50, // Adjust scroll position if you have a fixed header
-            behavior: "smooth"
-          });
-        }
-      });
-    });
-});
-    </script>
+    <script src="src/js/srollEvent.js"></script>
 </body>
 
 </html>
