--- a/index.html
+++ b/index.html
@@ -208,11 +208,12 @@
         <div class="section4 container">
             <div class="section2__heading">
                 <h1>
-                    My<span class="section__span"> Projects</span>
+                <span class="section__span"> Projects</span>
                 </h1>
             </div>
             <div class="section4__projects">
                 <div class="evsu__system">
+                    <h3 class="finished__project">My Finished Projects</h3>
                     <img src="project/Project1.jpg" alt="My project">
                     <p class="evsu__system__info">
                        I have been assigned as the programmer to build this project, which is our Thesis System. This system is named
