--- a/index.html
+++ b/index.html
@@ -113,19 +113,12 @@
                     from different angles and come up with well-rounded solutions. Secondly, my journey has honed my
                     leadership skills.
                     As a team leader, I know how to guide and inspire my team members effectively, whether in web
-                    development
-                    or graphic design projects.
+                    develop mentor graphic design projects.
                     <br>
                     <br>
-                    With such ambitions and strengths, I always seek new challenges to further mould my skills. I am
-                    incredibly
+                    With such ambitions and strengths, I always seek new challenges to further mould my skills. I am incredibly
                     passionate about personal and professional growth, and I see every challenge as an opportunity to
                     learn and improve.
-                    I strive to contribute my expertise in problem-solving and team leadership to create a positive
-                    impact and achieve
-                    success in every endeavour
-                    <br>
-                    <br>
                     My dedication, perseverance, problem-solving prowess, and team leadership skills make me uniquely
                     equipped to take
                     on new opportunities and challenges. I am excited to apply my experience and abilities to [the
@@ -212,13 +205,14 @@
                 </h1>
             </div>
             <div class="section4__projects">
-                <div class="evsu__system">
+                <div class="project1 evsu__system">
                     <h3 class="finished__project">My Finished Projects</h3>
+                    <div class="project__content">
                     <img src="project/Project1.jpg" alt="My project">
                     <p class="evsu__system__info">
                        I have been assigned as the programmer to build this project, which is our Thesis System. This system is named
                        <strong>
-                        'Events and Activities Attendance Management Monitoring and Management System.' 
+                        'Events and Activities Attendance Management Monitoring and Management System' 
                        </strong>
                         Some of the cool features of this system include the use of <strong>QR codes for attendance</strong>, 
                        <strong> support for offline scanning</strong>, <strong>temporary storage of users data in a JSON file if there is no internet 
@@ -226,6 +220,10 @@
                         registration. It can also post events to specific users and send them to their email if there are posted 
                         events, It also have a <strong>CRUD functionality</strong> This System uses <b>HTML, CSS, BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, json, phplibraries</b>.
                     </p>
+                </div>
+            </div>
+                <div class="project2 evsu__system">
+                    <div class="project__content">
                     <img src="project/Project2.jpg" alt="My project">
                     <p class="evsu__system__info">
                         I have been assigned as the programmer to build this project, <strong>PhilHealth System</strong>, This system I built when 
@@ -234,6 +232,7 @@
                         <b>HTML, CSS, BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, phplibraries</b>.
                      </p>
                 </div>
+                </div>  
             </div>
         </div>
     </section>
