--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
                         <a href="#projects">Projects</a>
                     </li>
                 </ul>
+                <ul class="navbar__menu__last">
+                    <li class="menu__list">
+                        <a href="#projects">Resume</a>
+                    </li>
+                </ul>
                 <div class="menu-icon" id="menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -126,7 +131,7 @@
             <hr>
         </div>
     </section>
-    <section id="services" class="main__page2">
+    <section id="services" class="main__page2" style="margin-top: -10px;">
         <div class="section3 container">
             <div class="section2__heading">
                 <h1>
@@ -190,10 +195,11 @@
                     </a>
                 </div>
             </div>
-            <hr class="section1__hr">
+            <br>
+            <hr>
         </div>
     </section>
-    <section id="projects" class="main__page2">
+    <section id="projects" class="main__page2" style="margin-top: -10px;">
         <div class="section4 container">
             <!-- Heading -->
             <div class="section2__heading">
@@ -278,44 +284,7 @@
             </div>
     </section>
 
-    <section id="" class="main__page2">
-        <div class="section5 container">
-            <div class="section2__bg__rocket">
-                <img src="icons/rocket-svgrepo-com.svg" alt="">
-            </div>
-            <div class="section5__menu">
-                <nav class="nav__menu container">
-                    <div class="section5__nav__manu">
-                        <ul>
-                            <li>
-                                <a href="">Skills</a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <li>
-                                <a href="">Resume</a>
-                            </li>
-                        </ul>
-                        <ul>
-                            <li>
-                                <a href="">Projects</a>
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="section5__heading">
-                <h1>
-                    My Skills
-                </h1>
-            </div>
-            <div class="section5__skills">
-
-
-                <br>
-                <hr class="section2__hr">
-            </div>
-    </section>
+ 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
     <script src="src/js/srollEvent.js"></script>
