--- a/index.html
+++ b/index.html
@@ -140,21 +140,21 @@
             </div>
             <div class="cards">
                 <div class="card card1">
-                    <img src="public/img/Service_1.jpg" alt="Web Development image">
+                    <img src="img/Service_1.jpg" alt="Web Development image">
                     <hr>
                     <div class="card-content">
                         <h3>"Web Development"</h3>
                     </div>
                 </div>
                 <div class="card card2">
-                    <img src="public/img/Service_2.jpg" alt="Web Development image">
+                    <img src="img/Service_2.jpg" alt="Web Development image">
                     <hr>
                     <div class="card-content">
                         <h3>"Mobile Development"</h3>
                     </div>
                 </div>
                 <div class="card card3">
-                    <img src="public/img/Service_3.jpg" alt="Web Development image">
+                    <img src="img/Service_3.jpg" alt="Web Development image">
                     <hr>
                     <div class="card-content">
                         <h3>"Graphics Design"</h3>
