--- a/index.html
+++ b/index.html
@@ -247,8 +247,11 @@
                     </div>
                 </div>
             </div>
+            <br>
+            <hr>
         </div>
     </section>
+    
     <section id="services" class="main__page2" style="margin-top: -10px;">
         <div class="section3 container">
             <div class="section2__heading">
@@ -294,7 +297,7 @@
                         </div>
 
                         <div class="ag-courses-item_date-box">
-                            For my web designs I am using Figma, Adobe InDesign, Canva and other softwares.
+                            For my web designs Im using Figma, Adobe InDesign, and other softwares.
                         </div>
                     </a>
                 </div>
@@ -308,7 +311,7 @@
                         </div>
 
                         <div class="ag-courses-item_date-box">
-                            For my Designs I am using Adobe Photoshop, Illustrator and other softwares
+                            For my graphics Im using Adobe Photoshop, and other softwares
                         </div>
                     </a>
                 </div>
