--- a/index.html
+++ b/index.html
@@ -407,17 +407,13 @@
 
     <footer class="main__footer">
         <div class="footer container">
-            <div class="footer__header">
-                <h3>Dhemler A. Omapas</h3>
-                <p>All Rights Reserved - 2023</p>
-            </div>
-            <hr>
             <div class="footer__contact">
                 <h3>Contact me</h3>
-                <p><a href="mailto:dhemzomaps@gmail.com">Email Me</a></p>
+                <a href="mailto:dhemzomaps@gmail.com"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i> Email </a>
             </div>
-            <!-- <div class="footer__socials">
-                <h3>My Socials</h3>
+            <hr>
+            <div class="footer__socials">
+                <h3>Socials</h3>
                 <div class="section__contact__links">
                     <a href="https://github.com/dhemz21" target="_blank"><i class="fa-brands fa-github"></i></a>
                     <a href="https://www.facebook.com/dhemz21.omp" target="_blank"><i
@@ -425,8 +421,12 @@
                     <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9" target="_blank"><i
                             class="fa-brands fa-linkedin"></i></a>
                 </div>
-            </div> -->
+            </div>
             <hr>
+            <div class="footer__header">
+                <h3>Dhemler A. Omapas</h3>
+                <p>All Rights Reserved - 2023</p>
+            </div>
         </div>
     </footer>
 
