--- a/index.html
+++ b/index.html
@@ -409,10 +409,10 @@
         <div class="footer container">
             <div class="footer__contact">
                 <h3>Contact me</h3>
-                <a href="mailto:dhemzomaps@gmail.com"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i> Email </a>
+                <a href="mailto:dhemzomaps@gmail.com"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i><span class="email"> Email </span></a>
             </div>
             <hr>
-            <div class="footer__socials">
+            <!-- <div class="footer__socials">
                 <h3>Socials</h3>
                 <div class="section__contact__links">
                     <a href="https://github.com/dhemz21" target="_blank"><i class="fa-brands fa-github"></i></a>
@@ -422,9 +422,9 @@
                             class="fa-brands fa-linkedin"></i></a>
                 </div>
             </div>
-            <hr>
+            <hr> -->
             <div class="footer__header">
-                <h3>Dhemler A. Omapas</h3>
+                <h3>Dhemler A. Omapas.</h3>
                 <p>All Rights Reserved - 2023</p>
             </div>
         </div>
