--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
             <hr> -->
             <div class="footer__header">
                 <h3>Dhemler A. Omapas.</h3>
-                <p>All Rights Reserved - 2023</p>
+                <p>&copy; All Rights Reserved - 2023</p>
             </div>
         </div>
     </footer>
