--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
                     Lets collaborate to drive success and elevate your company initiatives.
                 </cite>
             </div>
+            <div class="section__course container">
+                <h1>
+                    Bachelor of Science in Information Technology
+                </h1>
+            </div>
         </div>
-        <div class="section__course container">
-            <h1>
-                Bachelor of Science in Information Technology
-            </h1>
-        </div>
+       
     </section>
     <section id="about" class="main__page2">
         <div class="section2 container">
@@ -182,33 +183,32 @@
                         <button type="button" class="ac-trigger"><i class="fa-solid fa-circle-info" style="color: #ffffff;"></i> Additional Information</button>
                       </h2>
                       <div class="ac-panel">
-                        <p class="ac-text">I believe my unique experiences have shaped me into the person I am today and have greatly
-                            influenced my ambitions and strengths. One significant experience that stands out is the dedication
-                            I put into every task given to me. I have a strong work ethic, and I'm not afraid of putting in
-                            the effort required to excel. Additionally, I possess perseverance when it comes to problem-solving.
-                            I'm committed to finding innovative solutions and have proven my ability to overcome challenges in
-                            various scenarios.
+                       <div class="ac-text">
+                        <h3>College Graduate</h3>
+                        <p>
+                            Bachelor of Science in Information Technology
                             <br>
+                            <strong>Eastern Visayas State University</strong>
                             <br>
-                            Through these experiences, I have gained valuable lessons and skills. Firstly, I have learned to
-                            master
-                            all aspects of the problems we solve. This comprehensive understanding allows me to approach issues
-                            from different angles and come up with well-rounded solutions. Secondly, my journey has honed my
-                            leadership skills.
-                            As a team leader, I know how to guide and inspire my team members effectively, whether in web
-                            develop mentor graphic design projects.
+                            <cite>2018 - 2023</cite>
+                            <hr>
+                        <h3>Senior High School Graduate</h3> 
+                            <!-- <br> -->
+                            <strong>Cabintan Senior High School Ormoc City</strong>
                             <br>
+                            <cite>2016 - 2018</cite>
+                            <hr>
+                        <h3>Junior High School Graduate</h3> 
+                            <strong>Cabintan Junior High School Ormoc City</strong>
                             <br>
-                            With such ambitions and strengths, I always seek new challenges to further mould my skills. I am
-                            incredibly
-                            passionate about personal and professional growth, and I see every challenge as an opportunity to
-                            learn and improve.
-                            My dedication, perseverance, problem-solving prowess, and team leadership skills make me uniquely
-                            equipped to take
-                            on new opportunities and challenges. I am excited to apply my experience and abilities to [the
-                            company,
-                            organization, or situation] and play a meaningful role in its continued success.
+                            <cite>2012 - 2016</cite>
+                            <hr>
+                        <h3>Elementary Graduate</h3> 
+                            <strong>Canbintan Elementary School Ormoc City</strong>   
+                            <br>
+                            <cite>2007 - 2012</cite>
                         </p>
+                       </div>
                       </div>
                     </div>
                   </div>
@@ -412,17 +412,6 @@
                 <a href="mailto:dhemzomaps@gmail.com"><i class="fa-solid fa-envelope" style="color: #ffffff;"></i><span class="email"> Email </span></a>
             </div>
             <hr>
-            <!-- <div class="footer__socials">
-                <h3>Socials</h3>
-                <div class="section__contact__links">
-                    <a href="https://github.com/dhemz21" target="_blank"><i class="fa-brands fa-github"></i></a>
-                    <a href="https://www.facebook.com/dhemz21.omp" target="_blank"><i
-                            class="fa-brands fa-facebook"></i></a>
-                    <a href="https://www.linkedin.com/in/dhemler-omapas-0093281b9" target="_blank"><i
-                            class="fa-brands fa-linkedin"></i></a>
-                </div>
-            </div>
-            <hr> -->
             <div class="footer__header">
                 <h3>Dhemler A. Omapas.</h3>
                 <p>&copy; All Rights Reserved - 2023</p>
