--- a/index.html
+++ b/index.html
@@ -50,12 +50,23 @@
                         <a href="#projects">Projects</a>
                     </li>
                 </ul>
-                <div class="menu-icon" id="menu">
+                <div class="menu-icon" id="menu__icon">
                     <span class="bar"></span>
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
             </div>
+
+            <!-- Mobile menu -->
+            <div class="mobile__menu" id="mobile">
+                <a href="#about">About me</a>
+                <a href="#services">Services</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <hr style="background-color: #0f172a;">
+            </div>
+
+
         </nav>
     </header>
     <section class="main__page">
@@ -84,11 +95,6 @@
                     My adaptability, work ethic, and creattivity make me a valuable asset to your team.
                     Lets collaborate to drive success and elevate your company initiatives.
                 </cite>
-            </div>
-            <div class="section__course container">
-                <h1>
-                    Bachelor of Science in Information Technology
-                </h1>
             </div>
         </div>
        
@@ -420,6 +426,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-element-bundle.min.js"></script>
+    <script src="src/js/hamburger.js"></script>
     <script src="src/js/srollEvent.js"></script>
     <script src="src/js/accordion.js"></script>
     <script src="src/js/swiper.js"></script>
