--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/utils.css">
 
+    <link rel="stylesheet" href="src/css/animation.css">
+
     <!-- Main css -->
     <link rel="stylesheet" href="src/css/main-style.css">
     <!-- Fontawesome -->
@@ -59,10 +61,10 @@
 
             <!-- Mobile menu -->
             <div class="mobile__menu" id="mobile">
-                <a href="#about">About me</a>
-                <a href="#services">Services</a>
-                <a href="#skills">Skills</a>
-                <a href="#projects">Projects</a>
+                <a href="#about" class="about">About me</a>
+                <a href="#services" class="services" >Services</a>
+                <a href="#skills" class="skills">Skills</a>
+                <a href="#projects" class="projects">Projects</a>
                 <hr style="background-color: #0f172a;">
             </div>
 
@@ -376,7 +378,7 @@
                             there
                             are posted
                             events, It also have a <strong>CRUD functionality</strong> This System uses <b>HTML, CSS,
-                                BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, json, phplibraries</b>.
+                                BOOTSTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, json, phplibraries</b>.
                         </p>
                     </div>
                     <div class="project__swiper">
@@ -402,7 +404,7 @@
                             registration.
                             Every document has a unique code based on the date that the file was upladed, It also have a
                             CRUD functionality, This system uses
-                            <b>HTML, CSS, BOOTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, phplibraries</b>.
+                            <b>HTML, CSS, BOOTSTRAP, PHP, JAVASCRIPT, MYSQL, jquery, ajax, phplibraries</b>.
                         </p>
                     </div>
                 </div>
